# pymage

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml
pymage/: pymage.py  resizer.py
src/: __main__.py  main.py  pymage_cli.py  resizer.py
src/pymage/: __main__.py  cli.py  processor.py  pymage_cli.py  resizer.py
tests/: test_processor.py  test_resizer.py
