[metadata]
name = pymage
description = image processor
author = Rodrigo Martins
license = MIT
license_file = LICENSE
platforms = unixe, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pymage
install_requires = 
    Pillow>=9.3.0
    altgraph>=0.17.2
    pyinstaller>=5.1
    pyinstaller-hooks-contrib>=2022.7
    tk>=0.1.0
python_requires = >=3.6
package_dir = 
    =src
zipsafe = no

[options.extras_require]
testing = 
    flake8>=6.0.0
    tox>=4.6.4
    pytest>=7.4.0
    pytest-cov>=4.1.0
    mypy>=1.4.1

[options.package_data]
pymage = py.typed

[flake8]
max-line-length = 160