[metadata]
name = pymage
description = image processor
author = Rodrigo Martins
license = MIT
license_files = LICENSE
platforms = unixe, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.extras_require]
testing = 
    flake8>=6.0.0
    tox>=4.6.4
    pytest>=7.4.0
    pytest-cov>=4.1.0
    mypy>=1.4.1

[options.package_data]
pymage = py.typed

[flake8]
max-line-length = 160